[package]
authors = ["glechelo <lechelon.guillaume@gmail.com>"]
edition = "2018"
name = "exhaust_me_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "3.0.1"
anyhow = "1.0.2"
env_logger = "0.7.1"
serde = "1.0.116"
sqlx = {version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "mysql"]}
tokio = "0.2.22"
log = "0.4.11"
